--- a/hugo.yml
+++ b/hugo.yml
@@ -2,6 +2,7 @@ baseURL: 'https://superduperwebsite67.netlify.app/'
 languageCode: 'de-at'
 title: 'Physik 2025/26 6M'
 theme: 'PaperMod'
+copyright: "© 2026 Physik 2025/26 6M · Powered by Hugo & Johni12"
 
 menu:
   main:
