--- a/hugo.yml
+++ b/hugo.yml
@@ -1,4 +1,4 @@
-baseURL: 'https://bestwebsite.wasmer.app/'
+baseURL: '/superduperwebsite.vercel.app/'
 languageCode: 'de-at'
 title: 'Physik 2025/26 6M'
 theme: 'PaperMod'
